<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Pressure Note -->
    <TextView
        android:id="@+id/textViewPressureNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageViewPressureGauge"
        android:text="@string/pressure_note"
        android:textAlignment="center"
        android:textSize="20sp" />

    <!-- Pressure Gauge -->
    <ImageView
        android:id="@+id/imageViewPressureGauge"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPressureNote"
        app:layout_constraintBottom_toTopOf="@id/radioGroupPressure"
        app:srcCompat="@drawable/gauge_background" />

    <!-- Pressure Gauge Needle -->
    <ImageView
        android:id="@+id/imageViewPressureNeedle"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="@id/imageViewPressureGauge"
        app:layout_constraintStart_toStartOf="@id/imageViewPressureGauge"
        app:layout_constraintBottom_toBottomOf="@id/imageViewPressureGauge"
        app:srcCompat="@drawable/gauge_needle" />

    <!-- Pressure Values -->
    <TextView
        android:id="@+id/textviewPressureCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewPressureGauge"
        app:layout_constraintEnd_toEndOf="@id/imageViewPressureGauge"
        app:layout_constraintStart_toStartOf="@id/imageViewPressureGauge"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textviewPressureMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@id/imageViewPressureGauge"
        app:layout_constraintStart_toEndOf="@id/imageViewPressureGauge"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textviewPressureMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@id/imageViewPressureGauge"
        app:layout_constraintEnd_toStartOf="@id/imageViewPressureGauge"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textviewPressureCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/imageViewPressureGauge"
        app:layout_constraintEnd_toEndOf="@id/imageViewPressureGauge"
        app:layout_constraintStart_toStartOf="@id/imageViewPressureGauge"
        android:textSize="20sp" />

    <!-- Pressure Selector -->
    <RadioGroup
        android:id="@+id/radioGroupPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewPressureGauge"
        app:layout_constraintBottom_toBottomOf="parent" >

        <RadioButton android:id="@+id/radio_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_pressure"
            android:onClick="onRadioButtonClicked"
            android:checked="true"
            android:textSize="20sp" />

        <RadioButton android:id="@+id/radio_lightbeer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_beer_pressure"
            android:onClick="onRadioButtonClicked"
            android:textSize="20sp" />

        <RadioButton android:id="@+id/radio_darkbeer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_beer_pressure"
            android:onClick="onRadioButtonClicked"
            android:textSize="20sp" />

        <RadioButton android:id="@+id/radio_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_pressure"
            android:onClick="onRadioButtonClicked"
            android:textSize="20sp" />

    </RadioGroup>

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarBasic"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textviewPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarBasic"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/seekbarPressure"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarBasic"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="1000"
        android:progress="500"/>

</android.support.constraint.ConstraintLayout>